--- a/vroom/client/index.html
+++ b/vroom/client/index.html
@@ -1,20 +1,28 @@
 <html>
-    <head>
+	<head>
 		<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-        <script src="webrtc.js"></script>
-    </head>
+		<script src="webrtc.js"></script>
+		<link rel="stylesheet" type="text/css" href="vroom-style.css">
+		</link></head>
+	
+	<body>
+		
+			<diV class="menuBar">
+<div class="buttonBar">
+			<input type="button" id="start" onclick="start(true)" class="menuBarButton" value="Start Video"></input>
+			<input type="button" id="start" onclick="stop()" class="menuBarButton" value="Stop"></input>
+			<INPUT TYPE="button" onClick="history.go(0)" class="menuBarButton" VALUE="reset">
+			</INPUT></diV>
+	</div>
+		<video id="localVideo" autoplay muted class="localVideo"></video>
+	
+		<video id="remoteVideo" autoplay class="remoteVideo"></video>
+		
+	
 
-    <body>
-        <video id="localVideo" autoplay muted style="width:40%;"></video>
-        <video id="remoteVideo" autoplay style="width:40%;"></video>
-
-        <br />
-
-        <input type="button" id="start" onclick="start(true)" value="Start Video"></input>
-  <input type="button" id="start" onclick="stop()" value="Stop"></input>
-		<INPUT TYPE="button" onClick="history.go(0)" VALUE="reset">
-        <script type="text/javascript">
-            pageReady();
-        </script>
-    </body>
+		<script type="text/javascript">
+			pageReady();
+						
+		</script>
+	</body>
 </html>
