--- a/vroom/client/index.html
+++ b/vroom/client/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 		<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 		<script src="webrtc.js"></script>
 		<link rel="stylesheet" type="text/css" href="vroom-style.css">
