--- a/awall/widgets/vtr/index.html
+++ b/awall/widgets/vtr/index.html
@@ -1,44 +1,29 @@
-
 <template class="content">
 	<awall-widget>
 		<awall-widget-title value="Virtual Team Room"></awall-widget-title>
 		<awall-widget-size-default>
-
-
-
-			
-			
-			
+		
 			<div id="message"> </div>
-			<div id="loginElements">
-				<input type="button" id="loginButton1" onclick="loginAsUser1()" value="Login As Team 1"/>
-				<input type="button" id="loginButton2" onclick="loginAsUser2()" value="Login As Team 2"/>
-			</div>
 
-			<div id="roomElements" style="display: none;">
+			<div id="roomElements" style="display: block;">
 				Video On 2nd Screen:
-				 <input type="checkbox" id="externalVidCheckbox">
-	
-				<div id="memberList"></div>
+				<div></div>
+				<input type="checkbox" id="externalVidCheckbox"/>
 				<input type="button" id="enterRoomButton" onclick="enterRoom()" value="Enter Room 1"/>
-				<input type="button" id="logoutButton" onclick="logout()" value="Logout"/>
-			</div>
+				</div>
 
-			<div id="videoControlElements" style="display: none;">
-			<div id="message"></div>
-				<input type="button" id="hangupButton" onclick="hangup()" value="Leave Room"/>
-				  <video id="localVideo"  autoplay controls class="localVideo" style="width:100px"></video>  
-			
-			</div>
-		</awall-widget-size-default>
-	</awall-widget>
-</template>
+				<div id="videoControlElements" style="display: none;">
+					<input type="button" id="hangupButton" onclick="hangup()" value="Leave Room"/>
+					<video id="localVideo"  autoplay controls class="localVideo" style="width:100px"/>  
+				</div>
+			</awall-widget-size-default>
+		</awall-widget>
+	</template>
 
 
 
-<script>
-	var user;
-	var isLoggedIn = false;
+	<script>
+
 	const ROOM_NAME ="Room1";
 	var socket;
 	'use strict';
@@ -57,34 +42,35 @@
     window.RTCSessionDescription = window.RTCSessionDescription || window.mozRTCSessionDescription || window.webkitRTCSessionDescription;
     window.navigator.getUserMedia = window.navigator.getUserMedia || window.navigator.mozGetUserMedia || window.navigator.webkitGetUserMedia;
     window.URL = window.URL || window.mozURL || window.webkitURL;
-
+var extWindow;
     var localVideo;
     var remoteVideo;
-var isClosed = false;
-     var constraints = {audio: true, video: true};
+	var isClosed = false;
+    var constraints = {audio: true, video: true};
 
-	function prepare(){
+	window.onbeforeunload = function (e) {
+     hangup();
+    }
+
+
+	////////////////////////////////////////////////////
+	function enterRoom(){
+
 	socket= io.connect('https://server1095.cs.technik.fhnw.ch', {path: '/vroom/socket.io'});
 
-
-
-    socket.on('created', function (roomInfos) {
-        console.log('Created room ' + roomInfos.roomName);
-		console.log('members ' + roomInfos.members.toString());
+    socket.on('created', function (data) {
+        console.log('Created room ' + data.room);
         isInitiator = true;
 		showMessage("Waiting for participant...");
     });
-    socket.on('full', function (isFalse) {
-        console.log('Room  is full= ' +isFalse);
-    });
-    socket.on('join', function (roomInfos) {
-        console.log('Another peer made a request to join room ' + roomInfos.roomName);
-        console.log('This peer is the initiator of room ' + roomInfos.roomName + '!');
+    socket.on('join', function (data) {
+        console.log('Another peer made a request to join room ' + data.room);
+        console.log('This peer is the initiator of room ' + data.room + '!');
         isChannelReady = true;
 		showMessage("");
     });
-    socket.on('joined', function (roomInfos) {
-        console.log('This peer has joined room ' + roomInfos.roomName);
+    socket.on('joined', function (data) {
+        console.log('This peer has joined room ' + data.room);
         isChannelReady = true;
 		showMessage("");
     });
@@ -92,29 +78,9 @@ var isClosed = false;
 	socket.on('log', function (message){
 	  console.log(message);
 	});
-	socket.on('has-loged-in', function (roomList) {
-	console.log("Received: has-loged-in");
-		if(roomList.hasOwnProperty(ROOM_NAME)){
-			setRoomMembers(roomList[ROOM_NAME].members);
-			setRoomToFull(roomList[ROOM_NAME].isFull);
-		}
-		else{
-			setRoomMembers("No one in Room1 yet..");
-		}
-
-		showRoomElements(true);
-
-	});
 
 
-
-	socket.on('log', function (message){
-	  console.log(message);
-	});
-
-
-
-		socket.on('message', function (message) {
+	socket.on('message', function (message) {
         console.log('Client received message:', message);
         if (message === 'got user media') {
             maybeStart();
@@ -134,123 +100,51 @@ var isClosed = false;
         }
     });
 
-
-	}
-
-
-
-	////////////////////////////////////////////////////
-	function loginAsUser1(){
-	user = "TEAM1";
-	login("TEAM1");
-
-	}
-
-	function loginAsUser2(){
-	user = "TEAM2";
-	login("TEAM2");
-	}
-
-
-	function login(user){
-	if(socket == null){
-	prepare();
-	}
-	console.log('send login user ' + user);
-	socket.emit('login', user);
-	isLoggedIn = true;
-	}
-	////////////////////////////////////////////////////
-
-	function logout(){
-		console.log('logout');
-		socket.emit('logout', user);
-		isLoggedIn = false;
-		socket = null;
-		showLoginElements(true);
-
-	}
-
-
-	////////////////////////////////////////////////////
-	function enterRoom(){
-	extVid = extVid = $('body /deep/ #externalVidCheckbox').is(':checked')
+	
+	extVid = extVid = document.querySelector('body /deep/ #externalVidCheckbox').checked;
 	if(extVid){
-	window.open("https://server1095.cs.technik.fhnw.ch/vroom/conference?user=" + user,'_blank');
+		extWindow = window.open("https://server1095.cs.technik.fhnw.ch/vroom/conference",'_blank');
 	}
 	else{
-	console.log("user is: " + user);
-	var data = {room:ROOM_NAME, user:user}; 
-	console.log('send create_or_join', data);
-	socket.emit('create_join', data);
-	navigator.getUserMedia(constraints, handleUserMedia, handleUserMediaError);
-    console.log('Getting user media with constraints', constraints);
-	showVideoControlElements(true);
-	localVideo = document.querySelector('body /deep/ #localVideo');
-	 remoteVideo = document.querySelector('#bgvid');
-	 isClosed = false;
-	}
-	
-
+		var data = {room:ROOM_NAME}; 
+		console.log('send create_or_join', data);
+		socket.emit('create_join', data);
+		navigator.getUserMedia(constraints, handleUserMedia, handleUserMediaError);
+		console.log('Getting user media with constraints', constraints);
+		showVideoControlElements(true);
+		localVideo = document.querySelector('body /deep/ #localVideo');
+		remoteVideo = document.querySelector('#bgvid');
+		isClosed = false;
 	}
 
-	////////////////////////////////////////////////////
-
-	////////////////////////////////////////////////////
-
-	function setRoomMembers(roomMembers){
-	 if (typeof roomMembers != 'undefined') {
-		$("body /deep/ #memberList").html("Members in Room1: " +roomMembers.toString());
-		}
-	}
-
-	////////////////////////////////////////////////////
-
-	function setRoomToFull(isFull){
-	if(isFull){
-	$("#enterRoomButton").prop("disabled",true);
-		$('#message' ).html("<div>Room is full. You can not join</div>"); 
-		}
-		else{
-		$('#message' ).html("");
-		$("#enterRoomButton").prop("disabled",false);
-		}
 
 	}
+
 
 	////////////////////////////////////////////////////
 
 	function showRoomElements(show){
+	var element = document.querySelector("body /deep/ #roomElements");
 		if(show){
-			$("body /deep/ #roomElements").show();
-		   showLoginElements(false);
-		   showVideoControlElements(false);
+		element.style.display = 'block'; 
+		  showVideoControlElements(false);
 	   }
 	   else{
-			$("body /deep/ #roomElements").hide();
+		element.style.display = 'none'; 
 	   }
 	}
 
-	function showLoginElements(show){
-	if(show){
-		showRoomElements(false);
-		showVideoControlElements(false);
-			$('body /deep/ #loginElements').show();
-	}
-		else{
-			$('body /deep/ #loginElements').hide();
-		}
-	}
 
 
 		function showVideoControlElements(show){
+			var element = document.querySelector("body /deep/ #videoControlElements");
+
 		if(show){
-			$('body /deep/ #videoControlElements').show();
-			showLoginElements(false);
+			element.style.display = 'block'; 
 			showRoomElements(false);
 		}
 		else{
-			$('body /deep/ #videoControlElements').hide();
+			element.style.display = 'none'; 
 		}
 	}
 
@@ -266,7 +160,7 @@ var isClosed = false;
 
 
 		function showMessage(message){
-		$("body /deep/ #message").html(message);
+		document.querySelector("body /deep/ #message").innerHTML = message;
 	}
 
 ////////////////////////////////////////////////////
@@ -296,9 +190,7 @@ var isClosed = false;
             }
         }
     }
-    window.onbeforeunload = function (e) {
-        hangup();
-    }
+	
 /////////////////////////////////////////////////////////
     function createPeerConnection() {
         try {
@@ -345,33 +237,31 @@ var isClosed = false;
     }
     function handleRemoteStreamAdded(event) {
         console.log('Remote stream added.');
-
-            remoteVideo.src = window.URL.createObjectURL(event.stream);
-
+        remoteVideo.src = window.URL.createObjectURL(event.stream);
         remoteStream = event.stream;
     }
     function handleRemoteStreamRemoved(event) {
         console.log('Remote stream removed. Event: ', event);
     }
-	
+	/////////////////////////////////////////////////////////
 	function hangup(){
-	
-	socket.emit("message","bye");
-	closeStream();
-
+		console.log('Hanging up.');
+		socket.emit("hangup",ROOM_NAME);
+		closeStream();
 	}
-	
+	/////////////////////////////////////////////////////////
     function closeStream() {
-	if(extVid == false){
-		logout();
-		login(user);
+	if(extVid == true){
+	extWindow.close();
+	}
+	else{
 		showMessage("");
-        console.log('Hanging up.');
+        console.log('close stream.');
 		isClosed = true;
         isStarted = false;
 		isInitiator = false;
 		if(typeof pc != 'undefined' && pc != null){
-        pc.close();
+			pc.close();
 		}
         pc = null;
 		showRoomElements(true);
@@ -381,23 +271,10 @@ var isClosed = false;
 		remoteVideo.pause();
 		remoteVideo.src = "";
 		remoteVideo.load();
+		socket.disconnect();
 		}
     }
 
-	function getUrlParameter(sParam) {
-    var sPageURL = decodeURIComponent(window.location.search.substring(1)),
-        sURLVariables = sPageURL.split('&'),
-        sParameterName,
-        i;
 
-    for (i = 0; i < sURLVariables.length; i++) {
-        sParameterName = sURLVariables[i].split('=');
-
-        if (sParameterName[0] === sParam) {
-            return sParameterName[1] === undefined ? true : sParameterName[1];
-        }
-    }
-}
-
-		</script>
-		
+			</script>
+			
